--- a/src/pages/tournament/tournament.html
+++ b/src/pages/tournament/tournament.html
@@ -11,6 +11,11 @@
             {{ tournamentData.name }}
         </ion-title>
         <ion-buttons end>
+            <button ion-button icon-only (click)="goToSearch()">
+                <ion-icon name="search"></ion-icon>
+            </button>
+        </ion-buttons>
+        <ion-buttons end>
             <button ion-button icon-only (click)="displayMenu()">
                 <ion-icon name="menu" class="menu-button"></ion-icon>
             </button>
