--- a/src/pages/search/search.html
+++ b/src/pages/search/search.html
@@ -20,42 +20,58 @@ Ionic pages and navigation.
 
 
 <ion-content>
-    <!-- Refresh the current page -->
     <ion-refresher (ionRefresh)="refresh($event)">
         <ion-refresher-content refreshingText="Chargement"></ion-refresher-content>
     </ion-refresher>
     <ion-item-divider class="separation items"><b>Équipes</b></ion-item-divider>
-    <!-- When we click on the name of the team -> go to detail team -->
     <ion-grid class="no-margin-padding">
-        <ion-item *ngFor="let team of filteredTeams">
-            <div class="items" (click)="goToTeam(team)">
-                {{team.name}}
-                <ion-note item-right>
-                    ({{team.sport}})
-                </ion-note>
+        <div *ngIf="filteredTeams.length > 0">
+            <ion-item *ngFor="let team of filteredTeams">
+                <div class="items" (click)="goToTeam(team)">
+                    {{team.name}}
+                    <ion-note item-right>
+                        ({{team.sport}})
+                    </ion-note>
+                </div>
+            </ion-item>
+        </div>
+        <ion-item *ngIf="filteredTeams.length == 0">
+            <div class="items">
+                Aucune équipe trouvée
             </div>
         </ion-item>
     </ion-grid>
 
     <ion-item-divider class="separation items"><b>Participants</b></ion-item-divider>
-    <!-- When we click on the name of the _participant-> go to detail _participant -->
     <ion-grid class="no-margin-padding">
-        <ion-item *ngFor="let participant of filteredParticipants">
-            <div class="items" (click)="goToParticipant(participant)">
-                {{participant.lastname}} {{participant.firstname}}
-                <ion-note item-right *ngIf="participant.sports && participant.sports.length > 0">
-                    <!-- Might be to much functionaliy in the view. Could port to the controller. -->
-                    - ({{participant.sports.join(", ")}})
-                </ion-note>
+        <div *ngIf="filteredParticipants.length > 0">
+            <ion-item *ngFor="let participant of filteredParticipants">
+                <div class="items" (click)="goToParticipant(participant)">
+                    {{participant.lastname}} {{participant.firstname}}
+                    <ion-note item-right *ngIf="participant.sports && participant.sports.length > 0">
+                        - ({{participant.sports.join(", ")}})
+                    </ion-note>
+                </div>
+            </ion-item>
+        </div>
+        <ion-item *ngIf="filteredParticipants.length == 0">
+            <div class="items">
+                Aucun participant trouvé
             </div>
         </ion-item>
     </ion-grid>
 
     <ion-item-divider class="separation items"><b>Tournois</b></ion-item-divider>
-    <!-- When we click on the name of the _tournament -> go to detail _tournament -->
     <ion-grid class="no-margin-padding">
-        <ion-item *ngFor="let tournament of filteredTournaments">
-            <div class="items" (click)="goToTournament(tournament)">{{tournament.name}}</div>
+        <div *ngIf="filteredTournaments.length > 0">
+            <ion-item *ngFor="let tournament of filteredTournaments">
+                <div class="items" (click)="goToTournament(tournament)">{{tournament.name}}</div>
+            </ion-item>
+        </div>
+        <ion-item *ngIf="filteredTournaments.length == 0">
+            <div class="items">
+                Aucun tournoi trouvé
+            </div>
         </ion-item>
     </ion-grid>
 </ion-content>
