--- a/src/pages/events/events.html
+++ b/src/pages/events/events.html
@@ -28,8 +28,8 @@
 
     <ion-list>
         <!-- When we click on the name of the _event -> go to detail _event -->
-        <button ion-item *ngFor="let event of filteredEvents" (click)="goToEvent(event)">
+        <ion-item *ngFor="let event of filteredEvents" (click)="goToEvent(event)">
             <div class="items">{{event.name}}</div><!-- Display the name events -->
-        </button>
+        </ion-item>
     </ion-list>
 </ion-content>
