replace ion-img by img tag

--- a/src/pages/participant/participant.html
+++ b/src/pages/participant/participant.html
@@ -69,8 +69,8 @@
                     <ion-row style="flex-wrap: wrap;">
                         <!-- Display the logo for the sport and the name of the sport -->
                         <ion-col width-50>
-                            <ion-img src="assets/sports/{{ setIconSports(tournament.sport) }}" width="35" height="35"
-                                     class="sports-img"></ion-img>
+                            <img src="assets/sports/{{ setIconSports(tournament.sport) }}" width="35" height="35"
+                                     class="sports-img" />
                             <div class="items sports-label">{{ tournament.sport }}</div>
                         </ion-col>
 
