--- a/src/pages/team/team.html
+++ b/src/pages/team/team.html
@@ -57,7 +57,7 @@
                     <ion-row style="flex-wrap: wrap;">
                         <!--Display the icon for the sport -->
                         <ion-col width-50>
-                            <ion-img src="assets/sports/{{ setIconSports(teamData.sport) }}" width="35" height="35" class="sports-img"></ion-img>
+                            <img src="assets/sports/{{ setIconSports(teamData.sport) }}" width="35" height="35" class="sports-img" />
                             <div class="items sports-label">{{ teamData.sport }}</div>
                         </ion-col>
 
