Modifiy navigation with the menu
Added our name to the authors
Modified application name

--- a/src/pages/ip/ip.html
+++ b/src/pages/ip/ip.html
@@ -9,9 +9,11 @@
         <ion-title>
             IPs
         </ion-title>
-        <button ion-button menuToggle side="right">
-            <ion-icon name="menu" class="menu-button"></ion-icon>
-        </button>
+        <ion-buttons end>
+            <button ion-button icon-only (click)="displayMenu()">
+                <ion-icon name="menu" class="menu-button"></ion-icon>
+            </button>
+        </ion-buttons>
     </ion-navbar>
 </ion-header>
 
