--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -5,25 +5,34 @@
   Ionic pages and navigation.
 -->
 <ion-header>
-  <ion-navbar no-border-bottom>
-    <ion-title>
-      A propos
-    </ion-title>
-    <button ion-button menuToggle side="right">
-      <ion-icon name="menu" class="menu-button"></ion-icon>
-    </button>
-  </ion-navbar>
+    <ion-navbar no-border-bottom>
+        <ion-title>
+            A propos
+        </ion-title>
+        <ion-buttons end>
+            <button ion-button icon-only (click)="displayMenu()">
+                <ion-icon name="menu" class="menu-button"></ion-icon>
+            </button>
+        </ion-buttons>
+    </ion-navbar>
 </ion-header>
 
 <ion-content>
     <ion-list>
         <ion-item text-justify>
-            Cette application est destinée à consulter les informations pour les Joutes sportives du Centre professionnel du Nord vaudois (CPNV). <br /><br />
-            Vous utilisez la version <b>1.0</b>.<br /><br />
-            Application développée par :<br />
+            Cette application est destinée à consulter les informations pour les Joutes sportives du Centre professionnel du Nord vaudois
+            (CPNV).
+            <br />
+            <br /> Vous utilisez la version
+            <b>1.5</b>.
+            <br />
+            <br /> Application développée par :
+            <br />
             <div class="author">Genoud Malorie </div>
             <div class="author">Girard Quentin</div>
             <div class="author">Martignier Stéphane</div>
+            <div class="author">Goujgali Ilias</div>
+            <div class="author">Forsyth Struan</div>
         </ion-item>
     </ion-list>
 </ion-content>
