--- a/src/pages/tournament/tournament.html
+++ b/src/pages/tournament/tournament.html
@@ -95,7 +95,7 @@
         <ion-card-content no-padding>
 
             <!-- Add a slider to navigate between pools and eliminations -->
-            <ion-slides pager>
+            <ion-slides pager [initialSlide]="initialSlide">
                 <ion-slide *ngFor="let stage of poolsData" class="items">
                     <ion-row>
                         <!-- Display the name of the stage -->
