--- a/src/pages/search/search.html
+++ b/src/pages/search/search.html
@@ -6,7 +6,7 @@ Ionic pages and navigation.
 -->
 <ion-header>
     <ion-navbar no-border-bottom>
-        <ion-title>Global Search</ion-title>
+        <ion-title>Recherche Globale</ion-title>
         <ion-buttons end>
             <button ion-button icon-only (click)="displayMenu()">
                 <ion-icon name="menu" class="menu-button"></ion-icon>
