add page for offline mode

--- a/src/pages/event/event.html
+++ b/src/pages/event/event.html
@@ -16,6 +16,11 @@
             </button>
         </ion-buttons>
         <ion-buttons end>
+            <button ion-button icon-only (click)="goToOffline()">
+                <ion-icon name="cloud-download"></ion-icon>
+            </button>
+        </ion-buttons>
+        <ion-buttons end>
             <button ion-button icon-only (click)="displayMenu()">
                 <ion-icon name="menu" class="menu-button"></ion-icon>
             </button>
