add style and delete useless stuff

--- a/src/pages/offline/offline.html
+++ b/src/pages/offline/offline.html
@@ -7,12 +7,26 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>offline</ion-title>
+    <ion-title>Mode hors-ligne</ion-title>
   </ion-navbar>
-
 </ion-header>
 
 
-<ion-content padding>
-<button (click)="download()">Téléchargement pour le mode offline</button>
+<ion-content>
+
+  <ion-card>
+    <ion-card-header>
+      Utilisation de l'application hors-ligne
+    </ion-card-header>
+    <ion-card-content>
+      Il est possible de télécharger les informations des joutes localement sur votre appreil afin de pouvoir les consulter à tout
+      temps.
+      <br>
+      <br>
+      <br>
+
+
+      <button ion-button block (click)="download()">Téléchargement</button>
+    </ion-card-content>
+  </ion-card>
 </ion-content>
