Add endpoints page

--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -1,12 +1,12 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>Settings</ion-title>
+    <ion-title>Paramètres</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
 <ion-content padding>
-
+  <button ion-button (click)="openEndpoints()">Points d'accès</button>
 </ion-content>
