Add ion item divider

--- a/src/pages/endpoints/endpoints.html
+++ b/src/pages/endpoints/endpoints.html
@@ -8,18 +8,17 @@
 
 
 <ion-content padding>
-    <ion-list>
-        <ion-list-header>
-          Points d'accès en cours
-        </ion-list-header>
-        <ion-item>Terminator I</ion-item>
-        <ion-list-header>
-          Points d'accès officiels
-        </ion-list-header>
-        <ion-item>Terminator II</ion-item>
-        <ion-list-header>
-            Points d'accès personnels
-        </ion-list-header>
-        <ion-item>Terminator III</ion-item>
-      </ion-list>
+  <ion-content>
+    <ion-item-group>
+      <ion-item-divider class="separation"><b>Points d'accès en cours</b></ion-item-divider>
+    </ion-item-group>
+
+    <ion-item-group>
+      <ion-item-divider class="separation"><b>Points d'accès officiels</b></ion-item-divider>
+    </ion-item-group>
+
+    <ion-item-group>
+      <ion-item-divider class="separation"><b>Points d'accès personnels</b></ion-item-divider>
+    </ion-item-group>
+  </ion-content>
 </ion-content>
