--- a/src/pages/endpoints/endpoints.html
+++ b/src/pages/endpoints/endpoints.html
@@ -2,6 +2,11 @@
 
   <ion-navbar>
     <ion-title>Points d'accès</ion-title>
+    <ion-buttons end>
+        <button ion-button icon-only (click)="openCreateEndpoint()">
+            <ion-icon name="add"></ion-icon>
+        </button>
+    </ion-buttons>
   </ion-navbar>
 
 </ion-header>
