--- a/src/pages/create-endpoint/create-endpoint.html
+++ b/src/pages/create-endpoint/create-endpoint.html
@@ -8,5 +8,23 @@
 
 
 <ion-content padding>
+  <form [formGroup]="endpointForm" (ngSubmit)="createEndpoint()">
+    <ion-list>
 
+      <ion-item>
+        <ion-label floating>Nom</ion-label>
+        <ion-input type="text" formControlName="name"></ion-input>
+      </ion-item>
+
+      <ion-item>
+        <ion-label floating>Adresse</ion-label>
+        <ion-input type="text" formControlName="address"></ion-input>
+      </ion-item>
+
+      <ion-item>
+        <button ion-button type="submit">Ajouter</button>
+      </ion-item>
+
+    </ion-list>
+  </form>
 </ion-content>
