--- a/src/pages/edit-endpoint/edit-endpoint.html
+++ b/src/pages/edit-endpoint/edit-endpoint.html
@@ -13,12 +13,12 @@
 
       <ion-item>
         <ion-label floating>Nom</ion-label>
-        <ion-input type="text" formControlName="name" value="{{ endpoint.name }}"></ion-input>
+        <ion-input type="text" formControlName="name"></ion-input>
       </ion-item>
 
       <ion-item>
         <ion-label floating>Adresse</ion-label>
-        <ion-input type="text" formControlName="address" value="{{ endpoint.address }}"></ion-input>
+        <ion-input type="text" formControlName="address"></ion-input>
       </ion-item>
 
       <ion-item>
