--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -7,12 +7,18 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>login</ion-title>
+    <ion-title>Connexion</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
 <ion-content padding>
+
+  <h1>Connexion</h1>
+  <p>Pour activer toutes les fonctionnalités de l'application, il faut se logguer au site des joutes.</p>
+  <p>Veuillez cliquer sur le bouton pour vous logguer</p>
+  <button ion-button (click)="openwebbrowse()">Connexion</button>
+  <button ion-button (click)="disconnect()">DEV Deconnexion</button>
 
 </ion-content>
