--- a/src/pages/endpoints/endpoints.html
+++ b/src/pages/endpoints/endpoints.html
@@ -20,11 +20,16 @@
 
     <ion-item-group>
       <ion-item-divider class="separation"><b>Points d'accès officiels</b></ion-item-divider>
+      <ion-item *ngFor="let endpoint of this.endpointProvider.getAllOfficial()" value="endpoint.name">
+        {{ endpoint.name }}
+        <ion-icon name="create" item-right (click)="openEditPage(endpoint)"></ion-icon>
+        <ion-icon name="trash" item-right (click)="showConfirm(endpoint)"></ion-icon>
+      </ion-item>
     </ion-item-group>
 
     <ion-item-group>
       <ion-item-divider class="separation"><b>Points d'accès personnels</b></ion-item-divider>
-      <ion-item *ngFor="let endpoint of this.endpointProvider.getAll()" value="endpoint.name">
+      <ion-item *ngFor="let endpoint of this.endpointProvider.getAllManual()" value="endpoint.name">
         {{ endpoint.name }}
         <ion-icon name="create" item-right (click)="openEditPage(endpoint)"></ion-icon>
         <ion-icon name="trash" item-right (click)="showConfirm(endpoint)"></ion-icon>
