--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -9,18 +9,17 @@
         <ion-title>
             A propos
         </ion-title>
-        <ion-buttons end>
-            <button ion-button icon-only (click)="displayMenu()">
-                <ion-icon name="menu" class="menu-button"></ion-icon>
-            </button>
-        </ion-buttons>
+        <button ion-button menuToggle side="left">
+            <ion-icon name="menu" class="menu-button"></ion-icon>
+        </button>
     </ion-navbar>
 </ion-header>
 
 <ion-content>
     <ion-list>
         <ion-item text-justify>
-            Cette application est destinée à consulter les informations pour les Joutes sportives du Centre professionnel du Nord vaudois
+            Cette application est destinée à consulter les informations pour les Joutes sportives du Centre
+            professionnel du Nord vaudois
             (CPNV).
             <br />
             <br /> Vous utilisez la version
@@ -33,6 +32,8 @@
             <div class="author">Martignier Stéphane</div>
             <div class="author">Goujgali Ilias</div>
             <div class="author">Forsyth Struan</div>
+            <div class="author">Kévin Jordil</div>
+            <div class="author">Benjamin Delacombaz</div>
         </ion-item>
     </ion-list>
 </ion-content>
