Change menu button IP Page

--- a/src/pages/ip/ip.html
+++ b/src/pages/ip/ip.html
@@ -9,11 +9,9 @@
         <ion-title>
             IPs
         </ion-title>
-        <ion-buttons end>
-            <button ion-button icon-only (click)="displayMenu()">
-                <ion-icon name="menu" class="menu-button"></ion-icon>
-            </button>
-        </ion-buttons>
+        <button ion-button menuToggle side="left">
+            <ion-icon name="menu" class="menu-button"></ion-icon>
+        </button>
     </ion-navbar>
 </ion-header>
 
