Change menu button Settings Page

--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -2,6 +2,9 @@
 
   <ion-navbar>
     <ion-title>Paramètres</ion-title>
+    <button ion-button menuToggle side="left">
+      <ion-icon name="menu" class="menu-button"></ion-icon>
+    </button>
   </ion-navbar>
 
 </ion-header>
