Change menu button Event Page

--- a/src/pages/events/events.html
+++ b/src/pages/events/events.html
@@ -1,7 +1,7 @@
 <ion-header>
     <ion-navbar>
         <ion-title>Evènements</ion-title>
-        <button ion-button menuToggle side="right">
+        <button ion-button menuToggle side="left">
             <ion-icon name="menu" class="menu-button"></ion-icon>
         </button>
         <ion-buttons end>
