--- a/src/pages/event/event.html
+++ b/src/pages/event/event.html
@@ -14,13 +14,12 @@
             <ion-icon name="menu" class="menu-button"></ion-icon>
         </button>
         <ion-buttons end side="right">
+            <button *ngIf="!endpointProvider.isOnline()" class="offlineIcon" ion-button icon-only>
+                <ion-icon name="warning"></ion-icon>
+                <ion-icon name="globe"></ion-icon>
+            </button>
             <button ion-button icon-only (click)="goToSearch()">
                 <ion-icon name="search"></ion-icon>
-            </button>
-        </ion-buttons>
-        <ion-buttons end>
-            <button ion-button icon-only (click)="goToOffline()">
-                <ion-icon name="cloud-download"></ion-icon>
             </button>
         </ion-buttons>
     </ion-navbar>
