--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -10,6 +10,9 @@
 </ion-header>
 
 
-<ion-content padding>
-  <button ion-button (click)="openEndpoints()">Points d'accès</button>
+<ion-content>
+  <ion-list>
+    <ion-item><button ion-button (click)="openEndpoints()">Points d'accès</button></ion-item>
+  </ion-list>
+  
 </ion-content>
