--- a/src/pages/team/team.html
+++ b/src/pages/team/team.html
@@ -2,7 +2,7 @@
     <ion-navbar>
         <!-- Display the name of _event -->
         <ion-title>
-            {{ event.name }}
+            {{ teamData.name }}
         </ion-title>
         <ion-buttons end>
             <button ion-button icon-only (click)="goToSearch()">
@@ -20,136 +20,120 @@
 
     <div>
         <!-- Display the name of the team and display a icon trophy if the team have a status "Vainqueur" -->
-        <ion-col width-100>
-            <h2>Equipe <b>{{ teamData.name }}</b>
-                <ion-icon name="trophy" class="color-star" *ngIf="teamData.status == 'Vainqueur'"></ion-icon>
-            </h2>
-        </ion-col>
+        <ion-item-divider class="separation items"><b>Membres</b></ion-item-divider>
 
         <!-- Display the name of participants -->
-        <ion-card>
-            <ion-card-content no-padding>
-                <ion-grid text-center>
-                    <ion-row style="flex-wrap: wrap;">
-                        <ion-col width-50 *ngFor="let member of teamData.members">
-                            <span class="items">{{ member.lastname }} {{ member.firstname }}</span>
-                        </ion-col>
-                    </ion-row>
-                </ion-grid>
-            </ion-card-content>
-        </ion-card>
+        <ion-grid text-center>
+            <ion-row *ngFor="let member of teamData.members">
+                <ion-col class="items"><b>{{ member.lastname }}</b> {{ member.firstname }}</ion-col>
+            </ion-row>
+        </ion-grid>
 
         <!-- Display the name of the tournament -->
-        <ion-col width-100 class="no-padding-bottom"><h2>Tournoi <b>{{ tournament.name }}</b></h2></ion-col>
-        <ion-col width-100 no-padding>
-            <div style="font-weight: 100; margin-left:11px;">Cliquez pour plus de détails</div>
-        </ion-col>
+        <ion-item-divider class="separation items"><b>Tournoi {{ tournament.name }}</b></ion-item-divider>
+
 
         <!-- When we click on the name of the match -> go to detail tournament -->
-        <ion-card (click)="goToTournament(tournament)">
-            <ion-card-content no-padding>
-                <ion-grid text-center>
-                    <ion-row style="flex-wrap: wrap;">
-                        <!--Display the icon for the sport -->
-                        <ion-col width-50>
-                            <img src="assets/sports/{{ setIconSports(teamData.sport) }}" width="35" height="35" class="sports-img" />
-                            <div class="items sports-label">{{ teamData.sport }}</div>
-                        </ion-col>
+        <ion-grid text-center (click)="goToTournament(tournament)">
+            <ion-row style="flex-wrap: wrap;">
+                <!--Display the icon for the sport -->
+                <ion-col width-50>
+                    <img src="assets/sports/{{ setIconSports(teamData.sport) }}" width="35" height="35"
+                        class="sports-img" />
+                    <div class="items sports-label">{{ teamData.sport }}</div>
+                </ion-col>
 
-                        <!-- Display the place of the tournament -->
-                        <ion-col width-50>
-                            <ion-icon name="pin" class="info"></ion-icon>
-                            <div class="items">{{ tournament.place }}</div>
-                        </ion-col>
-                    </ion-row>
-                </ion-grid>
-            </ion-card-content>
-        </ion-card>
+                <!-- Display the place of the tournament -->
+                <ion-col width-50>
+                    <ion-icon name="pin" class="info"></ion-icon>
+                    <div class="items">{{ tournament.place }}</div>
+                </ion-col>
+            </ion-row>
+        </ion-grid>
 
-        <ion-col width-100 class="no-padding-bottom"><h2>Liste des <b>Matchs</b></h2></ion-col>
-        <ion-col width-100 no-padding>
-            <div style="font-weight: 100; margin-left:11px;">Cliquez pour plus de détails</div>
-        </ion-col>
 
-        <ion-card>
-            <ion-card-content no-padding>
-                <ion-list >
-                    <!-- When we click on the name of the match -> go to detail pool -->
-                    <ion-item *ngFor="let match of matches" (click)="goToPool(tournament, match.idPool)">
-                        <!-- Display a border green if the team win and display the score -->
-                        <ion-row class="border-win" *ngIf="match.ownScore > match.opponentScore">
-                            <!-- Display the name of the team -->
-                            <ion-col width-33 class="items">
-                                {{ match.ownName }}
-                            </ion-col>
+        <ion-item-divider class="separation items"><b>Liste des Matchs</b></ion-item-divider>
+        <!-- <ion-col width-100 class="no-padding-bottom"><h2>Liste des <b>Matchs</b></h2></ion-col> -->
 
-                            <!-- Display the score -->
-                            <ion-col text-center class="score">
-                                <ion-note class="items">{{ match.ownScore }} - {{ match.opponentScore }}</ion-note>
-                            </ion-col>
 
-                            <!-- Display the name of second team -->
-                            <ion-col width-33 class="items" text-right>
-                                {{ match.opponentName }}
-                            </ion-col>
-                        </ion-row>
+        <ion-list>
+            <!-- When we click on the name of the match -> go to detail pool -->
+            <ion-item *ngFor="let match of matches" (click)="goToPool(tournament, match.idPool)">
+                <!-- Display a border green if the team win and display the score -->
+                <ion-row class="border-win" *ngIf="match.ownScore > match.opponentScore">
+                    <!-- Display the name of the team -->
+                    <ion-col width-33 class="items">
+                        <b>{{ match.ownName }}</b>
+                    </ion-col>
 
-                        <!-- Display a border red if the team lose and display the score -->
-                        <ion-row class="border-lose" *ngIf="match.ownScore < match.opponentScore">
-                            <!-- Display the name of the team -->
-                            <ion-col width-33 class="items">
-                                {{ match.ownName }}
-                            </ion-col>
+                    <!-- Display the score -->
+                    <ion-col width-33 text-center class="score">
+                        <ion-note class="items">{{ match.ownScore }} - {{ match.opponentScore }}</ion-note>
+                    </ion-col>
 
-                            <!-- Display the score -->
-                            <ion-col text-center>
-                                <ion-note class="items">{{ match.ownScore }} - {{ match.opponentScore }}</ion-note>
-                            </ion-col>
+                    <!-- Display the name of second team -->
+                    <ion-col width-33 class="items" text-right>
+                        {{ match.opponentName }}
+                    </ion-col>
+                </ion-row>
 
-                            <!-- Display the name of the second team -->
-                            <ion-col width-33 class="items" text-right>
-                                {{ match.opponentName }}
-                            </ion-col>
-                        </ion-row>
+                <!-- Display a border red if the team lose and display the score -->
+                <ion-row class="border-lose" *ngIf="match.ownScore < match.opponentScore">
+                    <!-- Display the name of the team -->
+                    <ion-col width-33 class="items">
+                        <b>{{ match.ownName }}</b>
+                    </ion-col>
 
-                        <!-- Display a border orange if teams have tied and display the score -->
-                        <ion-row class="border-draw" *ngIf="match.ownScore == match.opponentScore && (match.ownScore != 0 && match.opponentScore != 0)">
-                            <!-- Display the name of the team -->
-                            <ion-col width-33 class="items">
-                                {{ match.ownName }}
-                            </ion-col>
+                    <!-- Display the score -->
+                    <ion-col width-33 text-center>
+                        <ion-note class="items">{{ match.ownScore }} - {{ match.opponentScore }}</ion-note>
+                    </ion-col>
 
-                            <!-- Display the score -->
-                            <ion-col text-center>
-                                <ion-note class="items">{{ match.ownScore }} - {{ match.opponentScore }}</ion-note>
-                            </ion-col>
+                    <!-- Display the name of the second team -->
+                    <ion-col width-33 class="items" text-right>
+                        {{ match.opponentName }}
+                    </ion-col>
+                </ion-row>
 
-                            <!-- Display the name of the second team -->
-                            <ion-col width-33 class="items" text-right>
-                                {{ match.opponentName }}
-                            </ion-col>
-                        </ion-row>
+                <!-- Display a border orange if teams have tied and display the score -->
+                <ion-row class="border-draw"
+                    *ngIf="match.ownScore == match.opponentScore && (match.ownScore != 0 && match.opponentScore != 0)">
+                    <!-- Display the name of the team -->
+                    <ion-col width-33 class="items">
+                        <b>{{ match.ownName }}</b>
+                    </ion-col>
 
-                        <!-- Display a border grey if the match didn't begin -->
-                        <ion-row class="border-inc" *ngIf="match.ownScore == 0 && match.opponentScore == 0">
-                            <!-- Display the name of the team -->
-                            <ion-col width-33 class="items">
-                                {{ match.ownName }}
-                            </ion-col>
+                    <!-- Display the score -->
+                    <ion-col width-33 text-center>
+                        <ion-note class="items">{{ match.ownScore }} - {{ match.opponentScore }}</ion-note>
+                    </ion-col>
 
-                            <!-- Display time of the match -->
-                            <ion-col text-center class="start">
-                                <ion-note class="items">{{ match.startTime }}</ion-note>
-                            </ion-col>
+                    <!-- Display the name of the second team -->
+                    <ion-col width-33 class="items" text-right>
+                        {{ match.opponentName }}
+                    </ion-col>
+                </ion-row>
 
-                            <!-- Display the name of the second team -->
-                            <ion-col width-33 class="items" text-right>
-                                {{ match.opponentName }}
-                            </ion-col>
-                        </ion-row>
-                    </ion-item>
-                </ion-list>
-            </ion-card-content>
-        </ion-card>
+                <!-- Display a border grey if the match didn't begin -->
+                <ion-row class="border-inc" *ngIf="match.ownScore == 0 && match.opponentScore == 0">
+                    <!-- Display the name of the team -->
+                    <ion-col width-33 class="items">
+                        <b>{{ match.ownName }}</b>
+                    </ion-col>
+
+                    <!-- Display time of the match -->
+                    <ion-col width-33 text-center class="start">
+                        <ion-note class="items">{{ match.startTime }}</ion-note>
+                    </ion-col>
+
+                    <!-- Display the name of the second team -->
+                    <ion-col width-33 class="items" text-right>
+                        {{ match.opponentName }}
+                    </ion-col>
+                </ion-row>
+            </ion-item>
+        </ion-list>
+
+
     </div>
 </ion-content>
