--- a/src/pages/tournament/tournament.html
+++ b/src/pages/tournament/tournament.html
@@ -28,97 +28,89 @@
     <ion-grid text-center class="white-background">
         <ion-row style="flex-wrap: wrap;">
             <ion-col width-50>
-                <ion-icon name="grid" class="info"></ion-icon><br/>
+                <ion-icon name="grid" class="info"></ion-icon><br />
                 <div class="items">{{ tournamentData.type }}</div>
             </ion-col>
             <ion-col width-50>
-                <ion-icon name="pin" class="info"></ion-icon><br/>
+                <ion-icon name="pin" class="info"></ion-icon><br />
                 <div class="items">{{ tournamentData.place }}</div>
             </ion-col>
         </ion-row>
     </ion-grid>
 
-    <ion-col width-100><h2>Liste des <b>Equipes</b></h2></ion-col>
-    <ion-card>
-        <ion-card-content no-padding>
+    <ion-item-divider class="separation items"><b>Liste des équipes</b></ion-item-divider>
+    <ion-list class="list">
+        <!-- When we click on the name of the team -> go to detail team -->
+        <ion-item *ngFor="let team of tournamentData.teams" (click)="goToTeam(team)">
+            <!-- Display the name of team -->
+            <div class="items">{{ team.name }}</div>
+        </ion-item>
+    </ion-list>
+
+    <ion-item-divider class="separation items"><b>Classement</b></ion-item-divider>
+    <!-- Display the classmate -->
+    <ion-list no-padding>
+        <ion-item no-padding>
+            <ion-row class="results">
+                <ion-col width-20><strong>1</strong></ion-col>
+                <!-- When we click on the name of the team -> go to detail team and display the classmate -->
+                <ion-col width-80 class="items" *ngIf="tournamentData.winner" (click)="goToTeam(tournamentData.winner)">
+                    {{tournamentData.winner.name}}</ion-col>
+                <!-- Display "En cours" if there is no winner -->
+                <ion-col width-80 class="items" *ngIf="!tournamentData.winner">En cours</ion-col>
+            </ion-row>
+
+            <ion-row class="results">
+                <ion-col width-20><strong>2</strong></ion-col>
+                <!-- When we click on the name of the team -> go to detail team and display the classmate -->
+                <ion-col width-80 class="items" *ngIf="tournamentData.second" (click)="goToTeam(tournamentData.second)">
+                    {{tournamentData.second.name}}</ion-col>
+                <!-- Display "En cours" if there is no winner -->
+                <ion-col width-80 class="items" *ngIf="!tournamentData.second">En cours</ion-col>
+            </ion-row>
+
+            <ion-row class="results">
+                <ion-col width-20><strong>3</strong></ion-col>
+                <!-- When we click on the name of the team -> go to detail team and display the classmate -->
+                <ion-col width-80 class="items" *ngIf="tournamentData.third" (click)="goToTeam(tournamentData.third)">
+                    {{tournamentData.third.name}}</ion-col>
+                <!-- Display "En cours" if there is no winner -->
+                <ion-col width-80 class="items" *ngIf="!tournamentData.third">En cours</ion-col>
+            </ion-row>
+        </ion-item>
+    </ion-list>
+
+    <ion-item-divider class="separation items"><b>Liste des poules</b></ion-item-divider>
+
+    <!-- Add a list to navigate between pools and eliminations -->
+    <ion-list>
+        <ion-item *ngFor="let stage of poolsData" class="items">
+            <ion-row>
+                <!-- Display the name of the stage -->
+                <ion-col width-100>
+                    <h1>Stage {{stage[0].stage}}</h1>
+                </ion-col>
+            </ion-row>
+
             <ion-list>
-                <!-- When we click on the name of the team -> go to detail team -->
-                <ion-item *ngFor="let team of tournamentData.teams" (click)="goToTeam(team)">
-                    <!-- Display the name of team -->
-                    <div class="items">{{ team.name }}</div>
-                </ion-item>
-            </ion-list>
-        </ion-card-content>
-    </ion-card>
-
-    <ion-col width-100><h2>Le <b>Classement</b></h2></ion-col>
-    <ion-card>
-        <ion-card-content no-padding padding-bottom>
-            <!-- Display the classmate -->
-            <ion-list no-padding>
-                <ion-item no-padding>
-                    <ion-row class="results">
-                        <ion-col width-20><strong>1</strong></ion-col>
-                        <!-- When we click on the name of the team -> go to detail team and display the classmate -->
-                        <ion-col width-80 class="items" *ngIf="tournamentData.winner" (click)="goToTeam(tournamentData.winner)">{{tournamentData.winner.name}}</ion-col>
-                        <!-- Display "En cours" if there is no winner -->
-                        <ion-col width-80 class="items" *ngIf="!tournamentData.winner">En cours</ion-col>
-                    </ion-row>
-
-                    <ion-row class="results">
-                        <ion-col width-20><strong>2</strong></ion-col>
-                        <!-- When we click on the name of the team -> go to detail team and display the classmate -->
-                        <ion-col width-80 class="items" *ngIf="tournamentData.second" (click)="goToTeam(tournamentData.second)">{{tournamentData.second.name}}</ion-col>
-                        <!-- Display "En cours" if there is no winner -->
-                        <ion-col width-80 class="items" *ngIf="!tournamentData.second">En cours</ion-col>
-                    </ion-row>
-
-                    <ion-row class="results">
-                        <ion-col width-20><strong>3</strong></ion-col>
-                        <!-- When we click on the name of the team -> go to detail team and display the classmate -->
-                        <ion-col width-80 class="items" *ngIf="tournamentData.third" (click)="goToTeam(tournamentData.third)">{{tournamentData.third.name}}</ion-col>
-                        <!-- Display "En cours" if there is no winner -->
-                        <ion-col width-80 class="items" *ngIf="!tournamentData.third">En cours</ion-col>
-                    </ion-row>
-                </ion-item>
-            </ion-list>
-        </ion-card-content>
-    </ion-card>
-
-    <ion-col width-100><h2>Liste des <b>Poules</b></h2></ion-col>
-    <ion-card>
-        <ion-card-content no-padding>
-
-            <!-- Add a slider to navigate between pools and eliminations -->
-            <ion-slides pager [initialSlide]="initialSlide">
-                <ion-slide *ngFor="let stage of poolsData" class="items">
+                <!-- When we click on the name of the match -> go to detail pool -->
+                <ion-item *ngFor="let pool of stage" (click)="goToPool(pool)">
                     <ion-row>
-                        <!-- Display the name of the stage -->
-                        <ion-col width-100>
-                            <h1>Stage {{stage[0].stage}}</h1>
+                        <!-- Display the name of group -->
+                        <ion-col width-50 no-padding>
+                            Pool {{ pool.name }}
+                        </ion-col>
+
+
+                        <!-- Display the number of match played on the total of matches to be played -->
+                        <ion-col width-50 text-right no-padding>
+                            <ion-note><img class="status-icon"
+                                    src="{{(pool.isFinished == 1 ? '/assets/finished.png': '/assets/nFinished.png')}}"
+                                    width="20" height="20" /></ion-note>
                         </ion-col>
                     </ion-row>
-
-                    <ion-list>
-                        <!-- When we click on the name of the match -> go to detail pool -->
-                        <ion-item *ngFor="let pool of stage" (click)="goToPool(pool)">
-                            <ion-row>
-                                <!-- Display the name of group -->
-                                <ion-col width-50 no-padding>
-                                     Pool {{ pool.name }}
-                                </ion-col>
-
-
-                                <!-- Display the number of match played on the total of matches to be played -->
-                                <ion-col width-50 text-right no-padding>
-                                    <ion-note><img class="status-icon" src="{{(pool.isFinished == 1 ? '/assets/finished.png': '/assets/nFinished.png')}}" width="20" height="20" /></ion-note>
-                                </ion-col>
-                            </ion-row>
-                        </ion-item>
-                    </ion-list>
-
-                </ion-slide>
-            </ion-slides>
-        </ion-card-content>
-    </ion-card>
+                </ion-item>
+            </ion-list>
+        </ion-item>
+    </ion-list>
 </ion-content>
