--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -13,6 +13,7 @@
 <ion-content>
   <ion-list>
     <ion-item><button ion-button (click)="openEndpoints()">Points d'accès</button></ion-item>
+    <ion-item><button ion-button (click)="downloadData()">Télécharger les données</button></ion-item>
   </ion-list>
   
 </ion-content>
